Master server POST endpoint for analysis.

--- a/cyclo-master-server/index.html
+++ b/cyclo-master-server/index.html
@@ -1,4 +1,4 @@
-<form>
+<form action="/analyse" method="get" enctype='application/json'>
   <label>
     Repository Link:
     <input type="text" name="repo_link" />
