Master server now receives repo link.

--- a/cyclo-master-server/index.html
+++ b/cyclo-master-server/index.html
@@ -1,7 +1,7 @@
-<form action="/analyse" method="get" enctype='application/json'>
+<form action="/analyse" method="post" enctype='application/json'>
   <label>
     Repository Link:
-    <input type="text" name="repo_link" />
+    <input type="text" name="repoLink" />
   </label>
   <input type="submit" value="Submit" />
 </form>
