--- a/cyclo-master-server/index.html
+++ b/cyclo-master-server/index.html
@@ -1,7 +1,7 @@
 <form action="/analyse" method="post" enctype='application/json'>
   <label>
     Repository Link:
-    <input type="text" name="repoLink" />
+    <input type="text" name="repoURL" />
   </label>
   <input type="submit" value="Submit" />
 </form>
